# fresholm

./: .gitignore  Cargo.toml  README.md  SECURITY_REVIEW_v0.3.0.md  autism-screening-referrals-bc.md  fresholm-matrix-nio-prompt.md  fresholm-review.md  fresholm-spec.md  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml
.remember/tmp/: save-session.pid
crates/vodozemac-python/: Cargo.toml
crates/vodozemac-python/src/: account.rs  errors.rs  group_session.rs  inbound_group_session.rs  lib.rs  pickle_format.rs  pk.rs  session.rs
docs/superpowers/notes/: 2026-04-27-vodozemac-pickle-kdf.md
docs/superpowers/plans/: 2026-04-11-fresholm-remaining.md  2026-04-11-fresholm.md  2026-04-12-matrix-nio-compat.md  2026-04-27-review-fixes.md  2026-04-28-bug-review-fixes.md  2026-04-28-pickle-kdf-v2.md
docs/superpowers/specs/: 2026-04-27-review-fixes-design.md
fresholm/: import_hook.py
fresholm/compat/: __init__.py  olm.py  sas.py  types.py  utility.py
fresholm/crypto_store/: __init__.py  base.py  memory.py
tests/: conftest.py  test_account.py  test_crypto_store.py  test_group_session.py  test_mautrix_compat.py  test_mautrix_integration.py  test_pickle_format.py  test_pk.py  test_pk_signing.py  test_sas.py  test_session.py  test_sessions.py  test_utility.py
