[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "fresholm"
version = "0.2.4"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["cryptography>=41.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mautrix>=0.21",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "fresholm._native"
manifest-path = "crates/vodozemac-python/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
