[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "fresholm"
version = "0.3.1"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["cryptography>=41.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # Plain mautrix (not mautrix[e2be]) — the e2be extra would pull python-olm,
    # which fails to build on macOS ARM64 / CMake 3.28+. Integration tests use
    # fresholm's import hook instead of co-installing python-olm.
    "mautrix>=0.21",
    # mautrix.crypto needs the same deps as its `encryption` extra minus
    # python-olm (fresholm replaces that). Pulled in directly because
    # mautrix[encryption] would drag python-olm, which fails to build on macOS
    # ARM64 / CMake 3.28+.
    "unpaddedbase64>=2.1",
    "pycryptodome>=3.20",
    "base58>=2.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "fresholm._native"
manifest-path = "crates/vodozemac-python/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
